# summer-practice-1

./: .gitignore  Animator.h  AssetManager.h  CMakeLists.txt  HEARTS_turns.cpp  HEARTS_turns.h  Hearts.cpp  Hearts.h  HeartsBOT.cpp  HeartsBOT.h  README.md  drawdurak.cpp  drawpik.cpp  durak.cpp  durak.h  gameMenu.cpp  main.cpp  menudurak.cpp  menudurak.h  menuhearts.cpp  menuhearts.h  menupik.cpp  menusolitaire.cpp  menusolitaire.h  pikdam.cpp  pikdam.h  readme.md  solitar.cpp  solitar.h
